--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.kubaduservices1">>
 
     <application
         android:allowBackup="true"
@@ -12,9 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KubaduServices1"
         tools:targetApi="31">
-        <activity
-            android:name=".LoanFragment"
-            android:exported="false" />
+
         <activity
             android:name=".ServicesActivity"
             android:exported="false" />
